게시판 조 담당 페이지 및 css 정리, findId/findPw 페이지 수정 및 정리, 공지사항 페이지 고정형 변경, 글 수정 페이지 구성, 내 활동 메뉴 버튼화

--- a/src/main/resources/static/css/admin/adminList.css
+++ b/src/main/resources/static/css/admin/adminList.css
@@ -22,7 +22,22 @@ a:hover {
     color: #fff; /* 활성화된 버튼 텍스트 색상 */
 }
 
+.adminTitle {
+    margin-bottom: 4rem;
+}
 
+.adminMenu {
+    width: 65%;
+}
+
+.searchForm {
+    width: 30%;
+}
+
+.replyAuthImg {
+    width: 25px;
+    height: 25px;
+}
 
 .user-list {
     background-color: #E8FFFF;
