--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -181,6 +181,15 @@ td {
     color: gray;
 }
 
+.showoffEmpty {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 230px;
+    text-align: center;
+    color: gray;
+}
+
 .boardEmpty p {
     font-size: 18px;
 }
