--- a/src/main/resources/static/css/user/findId.css
+++ b/src/main/resources/static/css/user/findId.css
@@ -1,3 +1,26 @@
+.container,
+.container > div {
+    height: 960px;
+}
+
+.container > div > div {
+    height: 700px;
+    width: 700px;
+}
+
+.findIdTitle {
+    height: 100px;
+    width: 700px;
+}
+
+h1 {
+    color: #67cafe;
+}
+
+.findIdContent {
+    height: 500px;
+}
+
 .find-button {
     background-color: #67cafe;
     border: 1px solid #67cafe;
@@ -33,6 +56,10 @@
     width: 400px;
 }
 
+.form-width {
+    width: 116px;
+}
+
 .blank {
-    height: 20px;
+    margin-bottom: 20px;
 }
