--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -35,7 +35,7 @@
                 <span class="mb-0" th:case="showoff">자랑게시판</span>
                 <span class="mb-0" th:case="general">자유게시판</span>
                 <span class="mb-0" th:case="tip">정보게시판</span>
-                <span class="mb-0" th:case="qna">Q&A게시판</span>
+                <span class="mb-0" th:case="qna">QnA</span>
             </p>
             <div>
                 <hr>
