--- a/src/main/resources/templates/board/register_q.html
+++ b/src/main/resources/templates/board/register_q.html
@@ -53,6 +53,12 @@
                     선택해주세요.
                 </small>
             </div>
+            <div>
+                <small class="text-muted">
+                    * 수의사를 답변자로 선택한 글에 답변이 등록되면 '수의사<img src="/img/tag/vetScope.png" alt="수의사태그" width="20">'아이콘이
+                    '답변완료<img src="/img/tag/completeQna.png" alt="답변완료" width="20">' 아이콘으로 변경됩니다.
+                </small>
+            </div>
             <div class="mb-2">
                 <small class="text-muted">
                     * 비밀글은 본인과 수의사, 관리자 권한을 가진 사람에게만 보여집니다.
