--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -63,7 +63,7 @@
                         </tbody>
                     </table>
                     </div>
-                    <div class="boardEmpty" th:if="${showOffList.isEmpty()}">
+                    <div class="showoffEmpty" th:if="${showOffList.isEmpty()}">
                         <p>등록된 게시물이 없습니다.</p>
                     </div>
                 </div>
