--- a/src/main/resources/static/css/my/userModify.css
+++ b/src/main/resources/static/css/my/userModify.css
@@ -60,8 +60,12 @@
     height: 38px;
 }
 
-.form-control {
+.form-width {
     width: 400px;
+}
+
+.form-tel {
+    width: 116px;
 }
 
 .feedback {
@@ -73,9 +77,32 @@
 }
 
 .container {
+    height: 1060px;
     max-width: 800px;
     margin: 0 auto; /* 중앙 정렬 */
     display: flex;
+}
+
+.container > div {
+    height: 1060px;
+}
+
+.myModifyTitle {
+    height: 100px;
+    width: 800px;
+}
+
+h1 {
+    color: #67cafe;
+}
+
+.myModifyContent {
+    height: 750px;
+    width: 800px;
+}
+
+select {
+    width: 116px;
 }
 
 .sidebar {
