--- a/src/main/resources/static/css/my/userRepliesActivity.css
+++ b/src/main/resources/static/css/my/userRepliesActivity.css
@@ -59,7 +59,7 @@ body {
     margin-top: 30px;
 }
 
-.countReply1 {
+.myPostRpl {
     background-color: #E8FFFF;
     border: 1px solid #d5d5d5;
     border-bottom: white;
@@ -68,7 +68,7 @@ body {
     padding: 10px;
 }
 
-.countReply2 {
+.myReplyRpl {
     background-color: #90E4FF;
     border: 1px solid #d5d5d5;
     border-left: white;
@@ -77,7 +77,7 @@ body {
     padding: 10px;
 }
 
-.countReply3 {
+.myScrapRpl {
     background-color: #E8FFFF;
     border: 1px solid #d5d5d5;
     border-left: white;
@@ -87,16 +87,9 @@ body {
     padding: 10px;
 }
 
-.countReply1 > a,
-.countReply2 > a,
-.countReply3 > a {
-    text-decoration: none;
-    color: #000;
-}
-
-.countReply1:hover,
-.countReply2:hover,
-.countReply3:hover {
+.myPostRpl:hover,
+.myReplyRpl:hover,
+.myScrapRpl:hover {
     background-color: #90E4FF;
 }
 
@@ -109,7 +102,7 @@ body {
     margin-bottom: 0;
 }
 
-td {
+td, tr {
     height: 70px;
 }
 
@@ -122,7 +115,7 @@ td > a {
     display: inline-block;
     width: 100%;
     border-radius: 10px;
-    background-color: #E8FFFF;
+    background-color: #dcffe0;
 }
 
 .boardCode {
