--- a/src/main/resources/templates/board/modify_q.html
+++ b/src/main/resources/templates/board/modify_q.html
@@ -29,6 +29,8 @@
 
     <div class="content">
 
+        <h2 class="modifyTitle mb-4">글 수정</h2>
+
         <form th:action="@{/board/modify_q}" method="post">
             <!--숨겨서 전송할 정보들-->
             <div class="d-flex justify-content-start">
@@ -50,44 +52,46 @@
                     </div>
                 </div> <!--게시판 코드-->
             </div>
-            <!--제목/게시판/태그 선택-->
-            <div class="d-flex justify-content-start mb-3">
-                <div class="me-3 postTitle">
+            <!--태그/답변자/비밀글/글 제목 입력-->
+            <div class="d-flex justify-content-between mb-1">
+                <div class="d-flex justify-content-start">
+                    <!--태그 선택-->
+                    <div class="postTag">
+                        <div class="form-group">
+                            <select class="form-select" name="postTag" aria-label="태그선택">
+                                <option value="null" selected>전체</option>
+                                <option value="0">강아지</option>
+                                <option value="1">고양이</option>
+                            </select>
+                        </div>
+                    </div> <!--태그 선택-->
+                    <!--질문 답변자 선택-->
+                    <div class="replyAuth">
+                        <div class="form-group">
+                            <select class="form-select" name="replyAuth" aria-label="질문답변자선택">
+                                <option selected>답변자선택</option>
+                                <option value="0">전체회원</option>
+                                <option value="1">수의사</option>
+                            </select>
+                        </div>
+                    </div> <!--질문 답변자 선택-->
+                    <!--비밀글 선택-->
+                    <div class="secret">
+                        <div class="form-group">
+                            <select class="form-select" name="secret" aria-label="비밀글선택">
+                                <option value="0" selected>전체공개</option>
+                                <option value="1">비밀글</option>
+                            </select>
+                        </div>
+                    </div> <!--비밀글 선택-->
+                </div>
+                <!--글 제목 입력-->
+                <div class="postTitleQ">
                     <div class="form-group">
-                        <input type="text" name="postTitle" class="form-control" th:value="${postDTO.postTitle}"
-                               aria-label="게시글제목">
+                        <input type="text" name="postTitle" class="form-control" th:value="${postDTO.postTitle}" aria-label="게시글제목">
                     </div>
-                </div> <!--제목입력-->
-                <div class="postTag">
-                    <!--선택되어있음-->
-                    <select class="form-select" name="postTag" aria-label="태그선택">
-                        <option value="강아지" th:selected="${postDTO.postTag == '강아지'}">강아지</option>
-                        <option value="고양이" th:selected="${postDTO.postTag == '고양이'}">고양이</option>
-                    </select>
-                </div> <!--태그 선택-->
-            </div> <!--제목/게시판/태그 선택-->
-
-            <!--고민/답변자/비밀글 선택-->
-            <div class="d-flex justify-content-start mb-3">
-                <div class="me-3 replyAuth">
-                    <div class="form-group">
-                        <!--선택되어있음-->
-                        <select class="form-select" name="replyAuth" aria-label="질문답변자선택">
-                            <option value="false" th:selected="${postDTO.replyAuth == false}">전체회원</option>
-                            <option value="true" th:selected="${postDTO.replyAuth == true}">수의사</option>
-                        </select>
-                    </div>
-                </div> <!--질문 답변자 선택-->
-                <div class="secret">
-                    <div class="form-group">
-                        <!--선택되어있음-->
-                        <select class="form-select" name="secret" aria-label="비밀글선택">
-                            <option value="false" th:selected="${postDTO.secret == false}">비밀글선택</option>
-                            <option value="true" th:selected="${postDTO.secret == true}">비밀글</option>
-                        </select>
-                    </div>
-                </div> <!--비밀글 선택-->
-            </div> <!--고민/답변자/비밀글 선택-->
+                </div> <!--글 제목 입력-->
+            </div> <!--태그/답변자/비밀글/글 제목 입력-->
 
             <!--글내용 입력-->
             <div>
