--- a/src/main/resources/templates/home/notice.html
+++ b/src/main/resources/templates/home/notice.html
@@ -16,7 +16,7 @@
     <div class="d-flex justify-content-center align-items-center">
         <div>
             <div class="d-flex justify-content-center align-items-center noticeTitle">
-                <h1><b>공지 사항</b></h1>
+                <h1>공지사항</h1>
             </div>
             <div class="d-flex flex-column justify-content-start align-items-center noticeContent">
                 <div class="d-flex flex-column justify-content-between">
