--- a/src/main/resources/templates/my/user-detail.html
+++ b/src/main/resources/templates/my/user-detail.html
@@ -16,15 +16,13 @@
 
 </div>
 
-<div class="container" style="height: 960px;">
-    <div class="d-flex justify-content-center align-items-center" style="height: 960px">
+<div class="container">
+    <div class="d-flex justify-content-center align-items-center myDetail">
         <div>
-            <div class="d-flex justify-content-center align-items-center"
-                 style="height: 100px; width: 800px;">
-                <h1 style="color: #67cafe"><b>내 정보</b></h1>
+            <div class="d-flex justify-content-center align-items-center detailTitle">
+                <h1>내 정보</h1>
             </div>
-            <div class="d-flex justify-content-center align-items-center"
-                 style="height: 650px; width: 800px;">
+            <div class="d-flex justify-content-center align-items-center detailContent">
                 <div class="d-flex flex-column justify-content-between">
                     <div>
                         <label>아이디</label>
