--- a/src/main/resources/templates/my/user-modify.html
+++ b/src/main/resources/templates/my/user-modify.html
@@ -16,15 +16,13 @@
 
 </div>
 
-<div class="container" style="height: 1060px;">
-    <div class="d-flex justify-content-center align-items-center" style="height: 1060px">
+<div class="container">
+    <div class="d-flex justify-content-center align-items-center">
         <div>
-            <div class="d-flex justify-content-center align-items-center"
-                 style="height: 100px; width: 800px;">
-                <h1 style="color: #67cafe"><b>내 정보 수정</b></h1>
+            <div class="d-flex justify-content-center align-items-center myModifyTitle">
+                <h1>내 정보 수정</h1>
             </div>
-            <div class="d-flex justify-content-center align-items-center"
-                 style="height: 750px; width: 800px;">
+            <div class="d-flex justify-content-center align-items-center myModifyContent">
                 <form id="userForm" action="/my/user-modify" method="post"
                       class="d-flex flex-column justify-content-between">
                     <!-- 수의사 인증 섹션 -->
@@ -107,8 +105,7 @@
                         <label for="tel">연락처</label>
                         <div class="d-flex">
                             <label for="telPrefix"></label>
-                            <select name="telPrefix" id="telPrefix" class="form-control form-width me-2"
-                                    style="width: 116px;">
+                            <select name="telPrefix" id="telPrefix" class="form-control form-tel me-2">
                                 <option value="010">010</option>
                                 <option value="011">011</option>
                                 <option value="016">016</option>
@@ -118,14 +115,10 @@
                             </select>
                             <span class="align-self-center mx-1">-</span>
                             <label for="telMiddle"></label>
-                            <input type="text" id="telMiddle" name="telMiddle" class="form-control form-width mx-1"
-                                   maxlength="4"
-                                   oninput="formatTelInput()" style="width: 116px;" required>
+                            <input type="text" id="telMiddle" name="telMiddle" class="form-control form-tel mx-1" maxlength="4" oninput="formatTelInput()" required>
                             <span class="align-self-center mx-1">-</span>
                             <label for="telSuffix"></label>
-                            <input type="text" id="telSuffix" name="telSuffix" class="form-control form-width ms-2"
-                                   maxlength="4"
-                                   oninput="formatTelInput()" style="width: 116px;" required>
+                            <input type="text" id="telSuffix" name="telSuffix" class="form-control form-tel ms-2" maxlength="4" oninput="formatTelInput()" required>
                         </div>
                         <div id="telFeedback" class="feedback"></div>
                     </div>
