--- a/src/main/resources/templates/user/find-pw.html
+++ b/src/main/resources/templates/user/find-pw.html
@@ -17,27 +17,22 @@
 
 </div>
 
-<div class="container" style="height: 960px">
-    <div class="d-flex justify-content-center align-items-center" style="height: 960px">
-        <div style="height: 700px; width: 700px;">
-            <div class="d-flex justify-content-center align-items-center"
-                 style="height: 100px; width: 700px;">
-                <h1 style="color: #67cafe"><b>FIND PASSWORD</b></h1>
+<div class="container">
+    <div class="d-flex justify-content-center align-items-center">
+        <div>
+            <div class="d-flex justify-content-center align-items-center findPwTitle">
+                <h1>비밀번호 찾기</h1>
             </div>
-            <div class="d-flex justify-content-center align-items-center" style="height: 500px;">
+            <div class="d-flex justify-content-center align-items-center findPwContent">
                 <form class="d-flex flex-column justify-content-between">
-
                     <div>
                         <label>이름</label>
                         <input type="text" name="name" id="name" class="form-control">
                     </div>
-                    <div>
+                    <div class="blank">
                         <label>아이디</label>
                         <input type="text" name="userId" id="userId" class="form-control">
                     </div>
-
-                    <div class="blank"></div>
-
                     <button class="appearance-button" type="button" onclick="findPw()">
                         <span>임시번호 발급</span>
                     </button>
